<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.OnBoardingActivity"
    android:background="#AEFFFFFF"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="15dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:layout_gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/onBoardindImportantTview"
        android:text="@string/important"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/onBoardingDescription"
        android:text="@string/on_boarding_descrption"
        android:lineSpacingExtra="5dp"
        android:textSize="18sp"
        android:layout_margin="10dp"
       app:layout_constraintTop_toBottomOf="@+id/onBoardindImportantTview" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onBoardingSettingsImgView"
        android:background="@drawable/ic_settings_black_24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoardingDescription"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onBoardingSettingsTview"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoardingSettingsImgView"/>
   <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onBoardingMenuImgView"
        android:background="@drawable/ic_menu_horiz_black_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingSettingsTview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onBoardingMenuTview"
            android:textSize="15sp"
            android:text="@string/menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onBoardingMenuImgView"/>

        <CheckBox
            android:id="@+id/onBoardingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_ask_again"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="15dp"

            app:layout_constraintTop_toBottomOf="@+id/onBoardingMenuTview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onBoardingSkipTview"
            android:text="@string/skip"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onBoardingMenuTview"
            android:layout_margin="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>